# rivets

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  automerge-considerations.md  cliff.toml  deny.toml  future-plan.mdd
.beads/: beads.left.jsonl
.rivets/: .gitignore  config.yaml  issues.jsonl
.rivets-044i/: baseline-ambiguity.txt  baseline-phantom-rate.txt  baseline.md  design.md  oracle.md  plan.md  post-ambiguity.txt  post-phantom-rate.txt  probe.rs  related-issues.md  review-decisions-round-1.md  review-decisions-round-2.md  review-decisions-round-3.md  verification.md  what-i-learned.md
.rivets-0gom/: after-lcb6-merge.txt  after-review-fixes.txt  after-round-2.txt  after-slice1.txt  after-slice2-clean.txt  after-slice2-fixed.txt  after-slice2.txt  after-slice3.txt  baseline-pre-fix.txt  cheapest_falsifier.py  design.md  diagnose_drop.py  diagnose_residual.py  index-baseline.md  oracle.sh  plan.md  pr-body.md  probe.py  probe2.py  related-issues.md  review-decisions-round-2.md  review-decisions-round-3.md  review-decisions-round-4.md  review-decisions.md  what-i-learned-post-lcb6.md
.rivets-3d0s/: audit_simulation.py  design-v3-k-hybrid.md  design.md  investigate.py  k_hybrid_simulation.py  lsp_probe.py  oracle.py  plan-v3-k-hybrid.md  plan.md  post_pass_simulation.py  pr67-review-decisions.md  probe.py  slice2-drift-evidence-2026-05-17.md
.rivets-6aoc/: cheapest_falsifier.py  design.md  diff_sets.py  falsifiable-design.md  measure-post-fix.json  measure-post-round-1-fixes.json  measure-pre-fix.json  measure.py  measurement-results.md  oracle.sh  plan.md  pr-body.md  probe.py  review-decisions-round-1.md
.rivets-714v/: cheapest_falsifier.py  design.md  falsifiable-design.md  oracle.py  plan.md  pr-body.md  probe.py  related-issues.md  review-decisions-round-1.md  review-decisions-round-2.md
.rivets-lcb6/: design.md  probe-snapshot.txt  probe.ps1  review-decisions-round-1.md  snapshot-post-fix.txt
.rivets-v465/: after-fix-counts.txt  check_pass_provenance.py  check_ref_extraction.py  check_same_crate_ambiguity.py  design.md  drill_one_same_crate.py  falsifiable-design.md  inspect_imports.py  plan.md  probe.py  refine_c5_upper_bound.py  review-decisions-round-1.md  review-decisions-round-2.md  review-decisions-round-3.md  review-decisions-round-4.md  simulate_rivets_0gom_lookup.py  source_module_shapes.py
.rivets-wsix/: design.md  oracle.sh  plan.md  probe.sh  probe_null_in_symbol.sh  probe_refs_bug.sh  related-issues.md  review-decisions-round-1.md  review-decisions-round-2.md  what-i-learned.md
.rivets-ycaq/: measurement-2026-05-17.md  probe_phantom_rate.py
bruno-examples/: Cargo.toml  lib.rs  parser.rs  rivet.tmLanguage.json  serializer.rs  storage.rs  types.rs
crates/rivets/: Cargo.toml  README.md
crates/rivets-jsonl/: Cargo.toml  README.md
crates/rivets-jsonl/src/: atomic.rs  error.rs  lib.rs  query.rs  reader.rs  stream.rs  warning.rs  writer.rs
crates/rivets-jsonl/tests/: resilient_loading.rs  roundtrip.rs
crates/rivets-mcp/: Cargo.toml  README.md
crates/rivets-mcp/src/: context.rs  error.rs  lib.rs  main.rs  models.rs  server.rs  tools.rs
crates/rivets-mcp/tests/: integration.rs
crates/rivets/.cargo-husky/hooks/: pre-commit
crates/rivets/src/: app.rs  cli.rs  config.rs  error.rs  id_generation.rs  lib.rs  main.rs  output.rs  storage.rs
crates/rivets/src/cli/: args.rs  execute.rs  mod.rs  types.rs  validators.rs
crates/rivets/src/commands/: init.rs  mod.rs
crates/rivets/src/domain/: mod.rs
crates/rivets/src/output/: color.rs  json.rs  mod.rs  tree.rs
crates/rivets/src/storage/: in_memory.rs  mod.rs
crates/rivets/src/storage/in_memory/: graph.rs  inner.rs  jsonl.rs  mod.rs  sorting.rs  trait_impl.rs
crates/rivets/tests/: cli_tests.rs  in_memory_resilient_loading.rs  in_memory_storage.rs  init_integration.rs
crates/rivets/tests/common/: mod.rs
crates/tethys/: Cargo.toml
crates/tethys/benches/: queries.rs
crates/tethys/src/: batch_writer.rs  lib.rs  main.rs  parallel.rs  types.rs
crates/tethys/src/cli/: mod.rs
crates/tethys/src/db/: mod.rs
crates/tethys/tests/: graph.rs  staleness_and_hashing.rs
docs/: README.md  architecture.md  data-flow.md  module-structure.md  rivets-jsonl-research.md  storage-architecture.md  task-dependency-graph.md  terminology.md
docs/design/: automerge-storage.md  code-intelligence.md  rivets-roadmap.md
docs/plans/: 2026-05-11-tethys-repo-split.md
docs/plans/archive/: 2026-05-11-tethys-repo-split.md
scripts/: commit-msg  setup-hooks.sh
