[workspace]
resolver = "3"
members = [
    "crates/rivets-jsonl",
    "crates/rivets",
    "crates/rivets-mcp",
    "crates/tethys",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Rivets Contributors"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async streams
futures = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Cryptography
sha2 = "0.10"

# Fast non-cryptographic hashing (content change detection)
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Async runtime
tokio = { version = "1.0", features = ["rt", "macros", "io-util", "fs", "sync"] }
async-trait = "0.1"

# Graph algorithms
# TODO(rivets-6op): Used for dependency graph cycle detection and traversal
petgraph = "0.6"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# CLI output formatting
colored = "3"
terminal_size = "0.4"
textwrap = "0.16"

# Internal workspace crates
rivets-jsonl = { version = "0.1.0", path = "crates/rivets-jsonl" }
rivets = { version = "0.1.0", path = "crates/rivets" }

# JSON Schema
schemars = "1.1"

# Configuration file format
serde_yaml = "0.9"

# Testing utilities
tempfile = "3.18"
rstest = "0.26"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
