[package]
name = "rivets-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP server for rivets issue tracking"
repository = "https://github.com/dwalleck/rivets"
homepage = "https://github.com/dwalleck/rivets"
documentation = "https://docs.rs/rivets-mcp"
readme = "README.md"
keywords = ["mcp", "model-context-protocol", "ai", "issue-tracking"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "rivets-mcp"
path = "src/main.rs"

[lib]
name = "rivets_mcp"
path = "src/lib.rs"

[dependencies]
# MCP protocol
rmcp = { version = "0.8", features = ["server", "transport-io"] }

# Core rivets
rivets = { workspace = true }

# Serialization & Schema
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full", "signal"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Date/time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
