[package]
name = "rivets"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A Rust-based issue tracking system using JSONL storage"
repository = "https://github.com/dwalleck/rivets"
homepage = "https://github.com/dwalleck/rivets"
documentation = "https://docs.rs/rivets"
readme = "README.md"
keywords = ["issue-tracker", "project-management", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "rivets"
path = "src/lib.rs"

[[bin]]
name = "rivets"
path = "src/main.rs"

[dependencies]
rivets-jsonl = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
petgraph = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }
colored = { workspace = true }
terminal_size = { workspace = true }

[features]
# Enable test utilities like MockStorage for downstream crates to use in their tests.
# This is useful when you want to test code that depends on the IssueStorage trait
# without requiring a real storage backend.
test-util = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
rstest = { workspace = true }
